# sniive-desktop

./: .eslintrc.cjs  .gitignore  .npmrc  README.md  dev-app-update.yml  electron-builder.yml  eslint.config.js  index.html  latest.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json
dev/: build.bat  build.sh  macOS.sh
dev/icons/sniive-script/: icon.icns
dev/python/: pyproject.toml  script.py  sniive-script.spec
python/: build.sh
python/source/: script.py
src/: AppError.tsx  AppLoading.tsx  AppMain.tsx  AppResult.tsx  AppSelectAudioDevice.tsx  AppSelectSurface.tsx  globals.css  main.tsx  state.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/app/: app_state.rs  cmd_cancel_recording.rs  cmd_finish_recording.rs  cmd_get_locale.rs  cmd_is_auth.rs  cmd_select_audio.rs  cmd_select_audio_close.rs  cmd_select_audio_start.rs  cmd_select_surface.rs  cmd_select_surface_close.rs  cmd_select_surface_start.rs  cmd_set_auth.rs  cmd_start_input.rs  cmd_stop_input.rs  mod.rs
src-tauri/src/audio/: audio_controller.rs  convert_audio.rs  mod.rs
src-tauri/src/input/: input_controller.rs  input_loop.rs  mod.rs  state_machine.rs
src-tauri/src/upload/: mod.rs  serialize_result.rs  upload_controller.rs
src/components/: audioInputSource.tsx  recordButton.tsx  videoInputSource.tsx
src/components/ui/: button.tsx  tooltip.tsx
src/lib/: locales.ts  types.ts  utils.ts
src/main/: createWindow.ts  index.ts  ipcConnect.ts  update.ts  utils.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  globalStore.ts  main.tsx  scriptTypes.ts  useRecording.ts  useVideo.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/: audioInputSource.tsx  audioPreview.tsx  goBackButton.tsx  recordButton.tsx  resultButton.tsx  videoInputSource.tsx  videoPreview.tsx
src/renderer/src/components/ui/: button.tsx  select.tsx  tooltip.tsx
src/renderer/src/components/utilityBar/: closeButton.tsx  dragButton.tsx  minimizeButton.tsx
src/renderer/src/lib/: createSoundDetector.ts  locales.ts  utils.ts
src/renderer/src/pageApp/: App.tsx  useAudio.ts  useRecording.ts  useUpdate.ts  useVideo.ts
src/renderer/src/pageResult/: Result.tsx  useResult.ts  wavConverter.ts
