[package]
name = "Sniive"
version = "0.1.2"
description = "Sniive"
authors = ["Sniive"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sniive_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc.1"
tauri-plugin-cli = "2.0.0-rc.1"
tauri-plugin-dialog = "2.0.0-rc.6"
tauri-plugin-fs = "2.0.0-rc.5"
tauri-plugin-deep-link = "2.0.0-rc"
reqwest = "0.12.7"
tauri-plugin-updater = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_cell = "2.1.0"
crabgrab = { version = "0.4.0", features = ["bitmap", "screenshot"] }
futures = "0.3.30"
image = "0.24.4"
rbase64 = "2.0.3"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.15.2"
hound = "3.5.1"
tokio = "1.40.0"
regex = "1.10.6"
active-win-pos-rs = "0.8.3"
wavers = "1.4.3"
circular-queue = "0.2.6"
turbojpeg = { version = "1.1.1", features = ["image"] }
sys-locale = "0.3.1"
