[tool.poetry]
name = "script"
version = "0.1.0"
description = "Record keys and clicks"
authors = ["Sniive <cc@sniive.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.7"
pywinctl = "^0.4"

[tool.poetry.group.dev.dependencies]
Nuitka = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
